# scd-agent

./: .gitignore  README.md  main.py  project.private.config.json  pyproject.toml
config/: config.yaml
miniapp/: .gitignore  README.md  app.js  app.json  app.wxss  config.js  project.config.json  需求文档.md
miniapp/mockdata/: seed.js
miniapp/pages/contacts/: contacts.js  contacts.wxml  contacts.wxss
miniapp/pages/entry/: entry.js  entry.json  entry.wxml  entry.wxss
miniapp/pages/index/: index.js  index.json  index.wxml  index.wxss
miniapp/pages/profile/: profile.js  profile.wxml  profile.wxss
miniapp/pages/qa/: qa.js  qa.json  qa.wxml  qa.wxss
miniapp/pages/trends/: trends.js  trends.json  trends.wxml  trends.wxss
miniapp/utils/: chart.js  llm.js  metrics.js  project.config.json  store.js
scripts/: infer.py  train.py
src/scd_agent/: __init__.py  cli.py  pipeline.py
src/scd_agent/agent/: __init__.py  decision.py
src/scd_agent/data/: __init__.py  loader.py  preprocess.py
src/scd_agent/models/: __init__.py  cnn_lstm.py
src/scd_agent/risk/: __init__.py  assessor.py
src/scd_agent/training/: __init__.py  trainer.py
src/scd_agent/utils/: __init__.py  config.py  logging_utils.py
tests/: conftest.py  test_config.py  test_model_and_trainer.py  test_preprocess.py  test_risk_and_agent.py
